--- a/package.yml
+++ b/package.yml
@@ -1,7 +1,7 @@
-package: addon_key
-version: '0.0.0'
+package: ycom_impersonate
+version: '0.0.1'
 author: 'Friends Of REDAXO'
-supportpage: https://github.com/FriendsOfREDAXO/addon_key
+supportpage: https://github.com/FriendsOfREDAXO/ycom_impersonate
 requires:
     redaxo: '^5.13.0'
     php:
