--- a/package.yml
+++ b/package.yml
@@ -4,6 +4,7 @@ author: 'Friends Of REDAXO'
 supportpage: https://github.com/FriendsOfREDAXO/ycom_impersonate
 page:
     title: 'translate:ycom_impersonate_title'
+    block: ycom
     perm: ycom_impersonate[]
     pjax: true
     icon: rex-icon rex-icon-seo
