--- a/package.yml
+++ b/package.yml
@@ -1,5 +1,5 @@
 package: ycom_impersonate
-version: '1.0.0-beta1'
+version: '1.0.0'
 author: 'Friends Of REDAXO'
 supportpage: https://github.com/FriendsOfREDAXO/ycom_impersonate
 page:
